Initial commit: Tirvan Kahvila Admin Panel

--- a/download-page/index.html
+++ b/download-page/index.html
@@ -1,9 +1,9 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizzeria Antonio - Download Admin App</title>
+    <title>Tirvan Kahvila - Download Admin App</title>
     <style>
         * {
             margin: 0;
@@ -131,7 +131,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🍕 Pizzeria Antonio</h1>
+        <h1>?? Tirvan Kahvila</h1>
         <p class="subtitle">Kitchen Admin App - Latest Version</p>
 
         <div id="loading" class="loading">
@@ -141,7 +141,7 @@
 
         <div id="content" style="display: none;">
             <div class="info">
-                📱 This page will automatically download the latest APK version.
+                ?? This page will automatically download the latest APK version.
                 Scan the QR code below on your Android device for quick access!
             </div>
 
@@ -153,7 +153,7 @@
             </div>
 
             <a id="downloadBtn" href="#" class="download-btn">
-                📥 Download Latest APK
+                ?? Download Latest APK
             </a>
 
             <div class="version-info">
@@ -164,13 +164,13 @@
         </div>
 
         <div id="error" class="error" style="display: none;">
-            ⚠️ Unable to fetch the latest version. Please try again later or contact support.
+            ?? Unable to fetch the latest version. Please try again later or contact support.
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
     <script>
-        const GITHUB_REPO = 'waelosamahelmi/antonio-admin';
+        const GITHUB_REPO = 'waelosamahelmi/tirva-admin';
         const API_URL = `https://api.github.com/repos/${GITHUB_REPO}/releases/latest`;
 
         async function fetchLatestRelease() {
